# grad-proj

./: .gitignore  CMakeLists.txt  README.md  flake.nix
shaders/: simple.frag.glsl  simple.vert.glsl
src/: device.cpp  instance.cpp  main.cpp  model.cpp  model_old.cxx  pipeline.cpp  renderer.cpp  shaders.cpp  swapchain.cpp  types.hpp  validation.cpp
